# rungoal

./: .gitignore  .rsyncignore  run-nfsn.sh  rungoal.code-workspace
.github/workflows/: deploy-nfsn.yml
api/: .gitignore  NOTES.md  README.md  alembic.ini  auth.py  main.py  pyproject.toml  queries.sql
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 342b3e319ddc_initial.py  3f0a8fb077b0_initial_db.py  60f683686ad6_added_weather.py  7157b213b820_initial_db.py  72f90d457e67_add_goal_name.py  a0f37e6cf80b_initial_db.py  c3a91968d3b2_initial_db.py  ceb9286c4b3d_add_user_is_onboarded.py  d2caac0cc037_initial_db.py  d4e6cd87b3cd_initial_db.py  d9b05b27767b_initial_db.py  f5c8949a701b_initial_db.py  ffa0c7aae1bf_.py
api/rungoal/: auth.py  cli.py  cors.py  crud.py  database.py  deps.py  errors.py  google.py  import_runtracker.py  main.py  models.py  open_meteo.py  routes.py  settings.py  sync.py  sync_operation.py  utils.py
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.vue  consts.ts  conversion.ts  fetch_more.ts  main.ts  misc.ts  models.ts  router.ts  utils.ts
ui/src/components/: Account.vue  AccountView.vue  ErrorsList.vue  FetchMoreTrigger.vue  GoalCard.vue  GoalView.vue  GoalsList.vue  HeaderView.vue  LoginButton.vue  RunCard.vue  RunView.vue  RunsList.vue  Sync.vue  SyncView.vue
ui/src/composables/: dialog.ts  fetchMore.ts
ui/src/dialogs/: AccountDialog.vue  ConfirmationDialog.vue  GoalDialog.vue  OnboardingDialog.vue
ui/src/models/: goal.ts  misc.ts  run.ts
ui/src/pages/: GoalPage.vue  HomePage.vue
ui/src/stores/: api.ts  dialogs.ts  session.ts
ui/src/styles/: style.css  style.scss
