[project]
name = "rungoal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
    "python-jose[cryptography]>=3.5.0",
]
