[project]
name = "Rungoal"
version = "0.9.0"
description = "Rungoal syncs your runs from Google Health, tracks running goals, and gives you all kinds of interesting statistics."
readme = "README.md"
authors = [
    { name = "Joshua Foster", email = "josh2112@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel>=0.0.38",
    "typer>=0.26.7",
    "tzdata>=2026.3",
    "uvicorn>=0.51.0",
]

[project.scripts]
rungoal-cli = "rungoal.cli:app"

[tool.fastapi]
entrypoint = "rungoal.main:app"

[tool.pyright]
include = ["rungoal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[lint]
select = ["ALL"]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.32",
]

[tool.ruff]
line-length = 100
